fix: styles at regular quantity selector were shifting the button position
it was happening because of not every number has the same with, fixed by using a specific width

--- a/src/components/CartMenu/cartMenu.scss
+++ b/src/components/CartMenu/cartMenu.scss
@@ -156,12 +156,6 @@
       opacity: 0.5;
     }
   }
-
-  span {
-    margin-top: 4px;
-    width: 16px;
-    text-align: center;
-  }
 }
 
 .cart--product-image {
