--- a/src/shared/components/QuantitySelector/quantitySelector.scss
+++ b/src/shared/components/QuantitySelector/quantitySelector.scss
@@ -12,4 +12,6 @@
 
 .control--quantity {
   margin-top: 4px;
+  width: 16px;
+  text-align: center;
 }
